--- a/system/views/argument/newactivity.html
+++ b/system/views/argument/newactivity.html
@@ -52,7 +52,7 @@
                         <!--Input 1 : -->
                         <div class="col-sm-6">
                             <div class="form-group label-static">
-                                <label class="control-label">Datepicker</label>
+                                <label class="control-label">活動日期</label>
                                 <input type="text" id="datepicker" name="time" class="datepicker form-control" value="2018-01-11" />
                             </div>
                         </div>
