--- a/system/views/argument/ActivityStatusPage.html
+++ b/system/views/argument/ActivityStatusPage.html
@@ -56,12 +56,14 @@
                         </div>
                         <div class="col-md-6" style="height: 500px;border-left: 1px #ccc solid;">
                             <h4>已建立之前測題目（取最新新增之至多五題前測）</h4>
+                            <button class="btn btn-primary" onclick="javascript:location.href='./newassessment'">建立前測問題</button>
                             <div id="qusetions" class=""></div>
                         </div>
                     </div>
                     <div id="Room_Sets" class="row" style="min-height: 500px;">
                         <div class="col-md-12">
                             <h4>分房情況</h4>
+                            <button class="btn btn-primary" onclick="javascript:location.href='./SendTesterToChatroom'">安排學生至活動聊天室</button>
                         </div>
                         <div id="non-room" class="col-md-2" style="border: 1px #ccc solid;margin:10px;">
                             <h4 >尚未分房</h4>
