--- a/system/views/argument/newTopic.html
+++ b/system/views/argument/newTopic.html
@@ -41,16 +41,17 @@
                 <div class="container">
                     <form action="./Topic" method="post">
                         <div class="title">
-                            <h2>論證主題內容輸入</h2>
+                            <h2>新增論證主題</h2>
                         </div>
                         <!--Input 1 : content-->
                         <div class="col-sm-8">
+                            <h3>1.論證主題內容輸入</h3>
                             <div class="input-group">
                                 <span class="input-group-addon">
 							        <i class="fa fa-comment-o"></i>
 						        </span>
                                 <div class="form-group label-floating">
-                                    <label class="control-label">content</label>
+                                    <label class="control-label">論證主題內容</label>
                                     <input type="text" name='content' class="form-control" value="例如：臺灣目前核能中利益與安全該怎麼取捨?" />
                                 </div>
                             </div>
@@ -58,7 +59,7 @@
                         <!--/ Input 1 : User id-->
                         <!-- summit button-->
                         <div class="col-sm-12">
-                            <input type="submit" class="btn btn-primary" value="done"></input>
+                            <input type="submit" class="btn btn-primary" value="新增"></input>
                         </div>
                         <!--/ summit button-->
                     </form>
