--- a/system/views/argument/newassessment.html
+++ b/system/views/argument/newassessment.html
@@ -42,8 +42,17 @@
                     <div class="title">
                         <h2>為活動建立前測問題</h2>
                     </div>
+                    
+                    <!--/ Input 1 : User id-->
+                    <!--Input 1 : -->
+                    <div class="col-sm-12" style="overflow:hidden;padding-bottom:15px;">
+                        <h3>1.選擇活動</h3>
+                        <select name="Activity_ID" id="Activity_ID" style="width: 100%;"></select>
+                    </div>
+                    <!--/ Input 1 : -->
                     <!--Input 1 : content-->
-                    <div class="col-sm-6" >
+                    <div class="col-sm-12" >
+                        <h3>2.輸入前測題目</h3>
                         <div class="input-group">
                             <span class="input-group-addon">
                                     <i class="fa fa-comment-o"></i>
@@ -54,13 +63,6 @@
                             </div>
                         </div>
                     </div>
-                    <!--/ Input 1 : User id-->
-                    <!--Input 1 : -->
-                    <div class="col-sm-6" style="overflow:hidden;">
-                        <h3>Activity</h3>
-                        <select name="Activity_ID" id="Activity_ID" style="width: 100%;"></select>
-                    </div>
-                    <!--/ Input 1 : -->
                     <!-- summit button-->
                     <div class="col-sm-12">
                         <button class="btn btn-primary" onclick="newAssessment();">建立</button>
