--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -92,7 +92,7 @@
 
                     <!-- Tabs with icons on Card -->
                     <div class="card card-nav-tabs">
-                        <div class="header header" style=" background-color: #99BBFF">
+                        <div class="header header-primary" style=" background-color: #99BBFF">
                             <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
                             <div class="nav-tabs-navigation">
                                 <div class="nav-tabs-wrapper">
@@ -147,31 +147,31 @@
                                 <div class="tab-pane" id="new">
                                     <p> 這是舉辦活動的第一個步驟，唯有在已經建立活動後才能繼續之後的步驟。<small>如果還沒有新增過任何論證主題的話，請先移置到新增題目。</small></p>
                                     <div class="col-md-8 col-md-offset-2">
-                                        <button class="btn btn-danger" onclick="javascript:location.href='./newactivity'">建立活動</button>
+                                        <button class="btn btn-primary" onclick="javascript:location.href='./newactivity'">建立活動</button>
                                     </div>
                                 </div>
                                 <div class="tab-pane" id="chatroom">
                                     <p>這邊你可找到屬於你的所有學生，並從中挑取加入你的活動。</p>
                                     <div class="col-md-8 col-md-offset-2">
-                                        <button class="btn btn-danger" onclick="javascript:location.href='./newTester'">設定活動學生</button>
+                                        <button class="btn btn-primary" onclick="javascript:location.href='./newTester'">設定活動學生</button>
                                     </div>
                                 </div>
                                 <div class="tab-pane" id="tester">
                                     <p>最後你可以將參與活動的學生進行分組，同組的同學會在進入活動的同時，直接移置到同個房間。</p>
                                     <div class="col-md-8 col-md-offset-2">
-                                        <button class="btn btn-danger" onclick="javascript:location.href='./SendTesterToChatroom'">安排活動學生進聊天室</button>
+                                        <button class="btn btn-primary" onclick="javascript:location.href='./SendTesterToChatroom'">安排活動學生進聊天室</button>
                                     </div>
                                 </div>
                                 <div class="tab-pane" id="topic">
                                     <p>新增論證題目，這些題目可以重複使用(舉辦多場活動)，但每次活動主題只能從中選一。</p>
                                     <div class="col-md-8 col-md-offset-2">
-                                        <button class="btn btn-danger" onclick="javascript:location.href='./newTopic'">新增題目</button>
+                                        <button class="btn btn-primary" onclick="javascript:location.href='./newTopic'">新增題目</button>
                                     </div>
                                 </div>
                                 <div class="tab-pane" id="front-test">
                                     <p>為活動建立前測問題，通過前測問題將會更了解受測者之立場，請提出適合採用五點量表之論述句，受測者會點選同意程度來表達立場。</p>
                                     <div class="col-md-8 col-md-offset-2">
-                                        <button class="btn btn-danger" onclick="javascript:location.href='./newassessment'">新增前測題目</button>
+                                        <button class="btn btn-primary" onclick="javascript:location.href='./newassessment'">新增前測題目</button>
                                     </div>
                                 </div>
                             </div>
