--- a/system/views/argument/ActivityStatusPage.html
+++ b/system/views/argument/ActivityStatusPage.html
@@ -2,21 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Activity Detail</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
+    <%- include ../argument/import/basic.html %>
+    <%- include ../argument/import/templete_css.html %>
 </head>
 
 <body class="index-page">
@@ -78,16 +65,8 @@
         </footer>
     </div>
 </body>
-<!--   Core JS Files   -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-<script src="assets/js/material-kit.js" type="text/javascript"></script>
+<%- include ../argument/import/templete_js.html %>
+
 <script type="text/javascript">
 $().ready(function() {
     // the body of this function is in assets/material-kit.js
@@ -101,8 +80,6 @@ $().ready(function() {
     }
 
 });
-</script>
-<script type="text/javascript">
 $.get("./activity", {},
     function(data1, status) {
         activity_list = JSON.parse(data1);
@@ -184,8 +161,7 @@ function getPublic(subuser_public) {
                 for (var fetch in subuser_public) {
                     f_uid = subuser_public[fetch]['user_id'];
                     if (f_uid == uid) {
-                        console.log($.inArray(u_rid, RoomID));
-
+                        
                         $('#memberOfActivity').append('<p>' + subuser_public[fetch]['name'] + ',' + subuser_public[fetch]['school'] + '</p>');
                         if (u_rid == '-1') {
                             $('#non-room').append('<h6>' + subuser_public[fetch]['name'] + ',' + subuser_public[fetch]['school'] + '</h6>');
@@ -194,7 +170,7 @@ function getPublic(subuser_public) {
                             $('#Room_Sets').append('<div id="'+u_rid+'-room" class="col-md-2" style="border: 1px #ccc solid;margin:10px;"><h4>Room</h4></div>');
                             $('#'+u_rid+'-room').append('<h6>' + subuser_public[fetch]['name'] + ',' + subuser_public[fetch]['school'] + '</h6>');
                         }else{
-                            console.log(u_rid);
+                            //console.log(u_rid);
                             $('#'+u_rid+'-room').append('<h6>' + subuser_public[fetch]['name'] + ',' + subuser_public[fetch]['school'] + '</h6>');
 
                         }
