--- a/system/views/argument/ChatroomPage2.html
+++ b/system/views/argument/ChatroomPage2.html
@@ -2,22 +2,8 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Chatroom</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
+    <%- include ../argument/import/basic.html %>
+    <%- include ../argument/import/templete_css.html %>
     <!--cheditor-->
     <script src="./assets/js/ckeditor/ckeditor.js"></script>
     <style>
@@ -281,8 +267,7 @@
     </footer>
 </body>
 <script src="./socket.io/socket.io.js"></script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<%- include ../argument/import/jq_offical.html %>
 </script>
 <script>
 var pathArray = window.location.pathname.split('/');
@@ -388,16 +373,8 @@ function SendActionToSql(Sentcontent, ad) {
 
 }
 </script>
-<!--   Core JS Files   -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-<script src="assets/js/material-kit.js" type="text/javascript"></script>
+<%- include ../argument/import/templete_js.html %>
+
 <script type="text/javascript">
 $.get("./user/public_data", {
         "mail": "<%=UserName%>"
@@ -428,8 +405,6 @@ $().ready(function() {
 
 
 });
-</script>
-<script>
 function GetReferences(keywords) {
     $.get("./References?keywords=" + keywords,
         function(data, status) {
@@ -485,8 +460,8 @@ function searchkeword() {
     GetReferences(keyval);
 }
 </script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <%- include ../argument/import/jq_offical.html %>
+
 <script>
 $(function() {
     $("#sub_windows").dialog({
