--- a/system/views/argument/SendTesterToChatroom.html
+++ b/system/views/argument/SendTesterToChatroom.html
@@ -2,26 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>
-        Send Tester To Chatroom
-    </title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
+    <%- include ../argument/import/basic.html %>
+    <%- include ../argument/import/templete_css.html %>
     <style>
     .sortable_col {
-        border: 4px solid #eee;
+        border: 4px solid #aaa;
         min-height: 200px;
         list-style-type: none;
         margin: 0;
@@ -44,7 +29,7 @@
 
 <body class="index-page">
     <header>
-     <%- include ../argument/bar/header.html %>   
+        <%- include ../argument/bar/header.html %>
     </header>
     <div class="wrapper">
         <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
@@ -64,21 +49,25 @@
                 <div class="container">
                     <div class="title">
                         <h2>安排學生至活動聊天室</h2>
+                        <label>新做的調整可以復蓋上次設定</label>
                     </div>
                     <!--Input 1 : -->
-                    <div id='main-sortable' class="col-sm-9">
+                    <div class="col-sm-8 ">
+                        <div>
+                            <h3>1.選擇活動</h3>
+                            <select name="Activity_ID" id="Activity_ID"></select>
+                        </div>
+                        <!--Input 1 : -->
                     </div>
                     <!--/ Input 1 : -->
                     <!--Input 1 : -->
-                    <div class="col-sm-3">
-                        <div>
-                            <h3>Select Activity</h3>
-                            <select name="Activity_ID" id="Activity_ID"></select>
-                        </div>
+                    <div class="col-sm-12">
+                        <h3>2.調整活動學生至聊天室</h3>
                         <button onclick="addsortable();" class="btn btn-primary">
                             <i class="fa fa-plus"></i> 新增聊天室
                         </button>
-                        <!--Input 1 : -->
+                        <div id='main-sortable' class="col-sm-12">
+                        </div>
                     </div>
                     <!--/ Input 1 : -->
                     <!-- summit button-->
@@ -90,20 +79,11 @@
             </div>
         </div>
         <footer>
-            <%- include ../argument/bar/footer.html %> 
+            <%- include ../argument/bar/footer.html %>
         </footer>
     </div>
 </body>
-<!--   Core JS Files   -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-<script src="assets/js/material-kit.js" type="text/javascript"></script>
+<%- include ../argument/import/templete_js.html %>
 <script type="text/javascript">
 $().ready(function() {
     // the body of this function is in assets/material-kit.js
@@ -118,14 +98,14 @@ $().ready(function() {
 
 });
 </script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<%- include ../argument/import/jq_offical.html %>
+
 <script>
 $(function() {
     $(".connectedSortable").sortable({
         connectWith: ".connectedSortable"
     }).disableSelection();
-    $("#main-sortable").append('<div class="col-sm-3"><h3>Unset</h3></span><ul id="sortable_Unseted" class="connectedSortable sortable_col" value="-1"></ul></div>');
+    $("#main-sortable").append('<div class="col-sm-3"><h3>目前活動學生</h3></span><ul id="sortable_Unseted" class="connectedSortable sortable_col" value="-1"></ul></div>');
 
 
 
@@ -138,7 +118,7 @@ sortableCount = 0;
 
 function addsortable() {
     var id = 'sortable_' + sortableCount;
-    var chatroomName = 'chatroom_' + (sortableCount + 1);
+    var chatroomName = 'ID.' + (sortableCount + 1) + ' 聊天室';
     $("#main-sortable").append('<div class="col-sm-3"><h3>' + chatroomName + '</h3></span><ul id="' + id + '" class="connectedSortable sortable_col" value="' + sortableCount + '"></ul></div>');
     //$("#"+id).append('<p>room</p>');
     //$("#"+id).append('<li class="ui-state-default">Item A</li>');
@@ -197,9 +177,9 @@ $.get("./activity",
     function(data, status) {
         activity_list = JSON.parse(data);
         if (!activity_list['return'].length) {
-                alert("尚未建立活動，請先建立活動。");
-                location.href="./newactivity";
-            }
+            alert("尚未建立活動，請先建立活動。");
+            location.href = "./newactivity";
+        }
 
         console.log(activity_list['text']);
         $('#Activity_ID').append('<optgroup id="y_Activitys" label="your Activity">');
@@ -208,8 +188,10 @@ $.get("./activity",
         $('#y_Activitys').append(htmltext);
         for (var i = 0; i < activity_list["return"].length; i++) {
             var a_id = activity_list["return"][i]["avtivity_id"];
-            var timeofactivity = activity_list["return"][i]["timeofactivity"].substring(0, 10);
-            htmltext = '<option value="' + a_id + '">activity:' + a_id + ',' + timeofactivity + '</option>'
+            var timeofactivity = activity_list["return"][i]["timeofactivity"].substring(0, 100);
+            var topic = activity_list["return"][i]["content"];
+
+            htmltext = '<option style="width:30px;" value="' + a_id + '">' + (i + 1) + '.' + timeofactivity + ',' + topic.substring(0, 50) + '</option>'
             $('#y_Activitys').append(htmltext);
         }
     }
@@ -230,11 +212,11 @@ $('#Activity_ID').on("change", function() {
             for (var i = 0; i < Tester_list["return"].length; i++) {
                 var user_id = Tester_list["return"][i]["user_id"];
                 var Tester_id = Tester_list["return"][i]["tester_id"];
-                var group = Tester_list["return"][i]["group_score"]=='-1'?"尚未執行前測":Tester_list["return"][i]["group_score"];
+                var group = Tester_list["return"][i]["group_score"] == '-1' ? "尚未執行前測" : Tester_list["return"][i]["group_score"];
 
                 for (var key in users) {
                     if (users[key]['user_id'] == user_id) {
-                        var user_tag = users[key]['name'] + ',' + users[key]['school']+' | '+group;
+                        var user_tag = users[key]['name'] + ',' + users[key]['school'] + ' | ' + group;
                         var htmltext = "<li class='ui-state-default' value='" + Tester_id + "'>" + user_tag + "</li>";
                         $('#sortable_Unseted').append(htmltext);
                     };
