--- a/system/views/argument/login.html
+++ b/system/views/argument/login.html
@@ -2,26 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>學生論證系統</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/css/material-kit.css" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="./assets/css/demo.css" rel="stylesheet" />
+    <%- include ../argument/import/basic.html %>
+        <%- include ../argument/import/templete_css.html %>
 </head>
 
 <body class="index-page">
-	<header>
-     <%- include ../argument/bar/header.html %>   
+    <header>
+        <%- include ../argument/bar/header.html %>
     </header>
     <div class="wrapper">
         <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
@@ -47,8 +34,8 @@
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
-							        <i class="fa fa-envelope-o"></i>
-						        </span>
+                                    <i class="fa fa-envelope-o"></i>
+                                </span>
                                 <div class="form-group label-floating">
                                     <label class="control-label">信箱</label>
                                     <input type="text" name='mail' value="user@mail.com" class="form-control" />
@@ -60,8 +47,8 @@
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
-							        <i class="fa fa-tag"></i>
-						        </span>
+                                    <i class="fa fa-tag"></i>
+                                </span>
                                 <div class="form-group label-floating">
                                     <label class="control-label">活動代號</label>
                                     <input type="text" name='a_tag' value="0-0000000000" class="form-control" />
@@ -79,7 +66,7 @@
             </div>
         </div>
         <footer>
-        <%- include ../argument/bar/footer.html %> 
+            <%- include ../argument/bar/footer.html %>
         </footer>
     </div>
 </body>
@@ -108,4 +95,5 @@ $().ready(function() {
 });
 
 
-</html>
+<
+/html>
