--- a/system/views/argument/newTester.html
+++ b/system/views/argument/newTester.html
@@ -2,21 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>學生論證系統</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
+    <%- include ../argument/import/basic.html %>
+    <%- include ../argument/import/templete_css.html %>
     <style>
     #feedback {
         font-size: 1.4em;
@@ -71,13 +58,20 @@
                         <h2>新增活動學生</h2>
                     </div>
                     <!--Input 1 : -->
-                    <div class="col-sm-6">
-                        <h6>若無顯示學生，則代表學生尚未申請成為你的學生。</h6>
-                        <h3>你的學生：</h3>
+                    <div class="col-sm-8">
+                        <h3>1.選擇活動</h3>
+                        <select name="Activity_ID" id="Activity_ID"></select>
+                    </div>
+                    <!--/ Input 1 : -->
+                    <!--Input 1 : -->
+                    <div class="col-sm-8">
+                        <h3>2.選擇學生：</h3>
+                        <label>若無顯示學生，則代表學生尚未申請成為你的學生。</label>
                         <p id="feedback">
-                            <span>You've selected:</span>
+                            <span>目前選擇:</span>
                             <br> <span id="select-result"></span>
                         </p>
+                        <h6 style="padding-top: 50px;">你的學生：</h6>
                         <ol id="selectable">
                             <!--
                       <li class="ui-widget-content" name='1'>Item 1</li>
@@ -88,12 +82,6 @@
                       <li class="ui-widget-content" name='6'>Item 6</li>
                       -->
                         </ol>
-                    </div>
-                    <!--/ Input 1 : -->
-                    <!--Input 1 : -->
-                    <div class="col-sm-6">
-                        <h3>Activity</h3>
-                        <select name="Activity_ID" id="Activity_ID"></select>
                     </div>
                     <!--/ Input 1 : -->
                     <!-- summit button-->
@@ -109,107 +97,93 @@
         </footer>
     </div>
 </body>
-<!--   Core JS Files   -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-<script src="assets/js/material-kit.js" type="text/javascript"></script>
-<script type="text/javascript">
-$().ready(function() {
-    // the body of this function is in assets/material-kit.js
-    materialKit.initSliders();
-    window_width = $(window).width();
+<%- include ../argument/import/templete_js.html %>
+    <script type="text/javascript">
+    $().ready(function() {
+        // the body of this function is in assets/material-kit.js
+        materialKit.initSliders();
+        window_width = $(window).width();
 
-    if (window_width >= 992) {
-        big_image = $('.wrapper > .header');
+        if (window_width >= 992) {
+            big_image = $('.wrapper > .header');
 
-        $(window).on('scroll', materialKitDemo.checkScrollForParallax);
-    }
-
-});
-</script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
-$("#selectable").selectable({
-    stop: function() {
-        var result = $("#select-result").empty();
-        $(".ui-selected", this).each(function() {
-            var name = $(this).attr('name');
-            result.append("<li> #" + name + '</li>');
-        });
-    }
-});
-</script>
-<script>
-$.get("./user/subuser",
-    function(data, status) {
-        activity_list = JSON.parse(data);
-        console.log(activity_list['text']);
-
-        if (activity_list["return"].length == 0) {
-            alert("尚未有學生申請成為你的學生。");
+            $(window).on('scroll', materialKitDemo.checkScrollForParallax);
         }
 
-        for (var i = 0; i < activity_list["return"].length; i++) {
-            var user_id = activity_list["return"][i]["user_id"];
-            var user_name = activity_list["return"][i]["name"];
-            var user_school = activity_list["return"][i]["school"];
-
-            var htmltext = '<li class="ui-widget-content" value="' + user_id + '" name="' + user_name + '">' + user_name + ' , ' + user_school + '</li>';
-            $('#selectable').append(htmltext);
-
-
-        }
-    }
-);
-$.get("./activity",
-    function(data, status) {
-        activity_list = JSON.parse(data);
-        console.log(activity_list['text']);
-        $('#Activity_ID').append('<optgroup id="y_Activitys" label="your Activity">');
-
-        if (activity_list["return"].length == 0) {
-            alert("您還未建立活動，請先建立活動。");
-            location.href = "./newactivity";
-        }
-
-        for (var i = 0; i < activity_list["return"].length; i++) {
-            var a_id = activity_list["return"][i]["avtivity_id"];
-            var timeofactivity = activity_list["return"][i]["timeofactivity"].substring(0, 100);
-            var topic = activity_list["return"][i]["content"];
-            htmltext = '<option value="' + a_id + '">activity:' + a_id + ',' + timeofactivity + ',' + topic + '</option>'
-            $('#y_Activitys').append(htmltext);
-        }
-    }
-);
-</script>
-<script type="text/javascript">
-function newTester() {
-    var activity_id = $('#Activity_ID').val();
-    var PostData = '[';
-    $(".ui-selected", '#selectable').each(function() {
-        var u_id = $(this).attr('value');
-        PostData += '["' + activity_id + '","' + u_id + '"],';
     });
-    PostData = PostData.substring(0, PostData.length - 1) + ']';
-    console.log(PostData);
-    $.post("./tester", {
-            'JsonData': PostData
-        },
+    </script>
+<%- include ../argument/import/jq_offical.html %>
+    <script>
+    $("#selectable").selectable({
+        stop: function() {
+            var result = $("#select-result").empty();
+            $(".ui-selected", this).each(function() {
+                var name = $(this).attr('name');
+                result.append("<li> #" + name + '</li>');
+            });
+        }
+    });
+    $.get("./user/subuser",
         function(data, status) {
-            console.log(data);
-            alert('done.');
-            location.href = './sittingPage';
+            activity_list = JSON.parse(data);
+            console.log(activity_list['text']);
+
+            if (activity_list["return"].length == 0) {
+                alert("尚未有學生申請成為你的學生。");
+            }
+
+            for (var i = 0; i < activity_list["return"].length; i++) {
+                var user_id = activity_list["return"][i]["user_id"];
+                var user_name = activity_list["return"][i]["name"];
+                var user_school = activity_list["return"][i]["school"];
+
+                var htmltext = '<li class="ui-widget-content" value="' + user_id + '" name="' + user_name + '">' + user_name + ' , ' + user_school + '</li>';
+                $('#selectable').append(htmltext);
+
+
+            }
         }
     );
-}
-</script>
+    $.get("./activity",
+        function(data, status) {
+            activity_list = JSON.parse(data);
+            console.log(activity_list['text']);
+            $('#Activity_ID').append('<optgroup id="y_Activitys" label="你的活動">');
+
+            if (activity_list["return"].length == 0) {
+                alert("您還未建立活動，請先建立活動。");
+                location.href = "./newactivity";
+            }
+
+            for (var i = 0; i < activity_list["return"].length; i++) {
+                var a_id = activity_list["return"][i]["avtivity_id"];
+                var timeofactivity = activity_list["return"][i]["timeofactivity"].substring(0, 100);
+                var topic = activity_list["return"][i]["content"];
+                htmltext = '<option value="' + a_id + '">activity:' + a_id + ',' + timeofactivity + ',' + topic.substring(0, 50) + '</option>'
+                $('#y_Activitys').append(htmltext);
+            }
+        }
+    );
+
+    function newTester() {
+        var activity_id = $('#Activity_ID').val();
+        var PostData = '[';
+        $(".ui-selected", '#selectable').each(function() {
+            var u_id = $(this).attr('value');
+            PostData += '["' + activity_id + '","' + u_id + '"],';
+        });
+        PostData = PostData.substring(0, PostData.length - 1) + ']';
+        console.log(PostData);
+        $.post("./tester", {
+                'JsonData': PostData
+            },
+            function(data, status) {
+                console.log(data);
+                alert('done.');
+                location.href = './sittingPage';
+            }
+        );
+    }
+    </script>
 
 </html>
