--- a/system/views/argument/newassessment.html
+++ b/system/views/argument/newassessment.html
@@ -2,21 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>學生論證系統</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
+    <%- include ../argument/import/basic.html %>
+<%- include ../argument/import/templete_css.html %>
 </head>
 
 <body class="index-page">
@@ -45,13 +32,13 @@
                     
                     <!--/ Input 1 : User id-->
                     <!--Input 1 : -->
-                    <div class="col-sm-12" style="overflow:hidden;padding-bottom:15px;">
+                    <div class="col-sm-8" style="overflow:hidden;padding-bottom:15px;">
                         <h3>1.選擇活動</h3>
                         <select name="Activity_ID" id="Activity_ID" style="width: 100%;"></select>
                     </div>
                     <!--/ Input 1 : -->
                     <!--Input 1 : content-->
-                    <div class="col-sm-12" >
+                    <div class="col-sm-8" >
                         <h3>2.輸入前測題目</h3>
                         <div class="input-group">
                             <span class="input-group-addon">
@@ -105,7 +92,7 @@ $.get("./activity",
     function(data, status) {
         activity_list = JSON.parse(data);
         console.log(activity_list['text']);
-        $('#Activity_ID').append('<optgroup id="y_Activitys" label="your Activity">');
+        $('#Activity_ID').append('<optgroup id="y_Activitys" label="你的活動">');
 
         if (activity_list["return"].length == 0) {
             alert("您還未建立活動，請先建立活動。");
@@ -118,7 +105,7 @@ $.get("./activity",
             var timeofactivity = activity_list["return"][i]["timeofactivity"].substring(0, 100);
             var topic = activity_list["return"][i]["content"];
 
-            htmltext = '<option style="width:30px;" value="' + a_id + '">activity:' + (i+1) + ',' + timeofactivity +','+topic.substring(0,20)+'</option>'
+            htmltext = '<option style="width:30px;" value="' + a_id + '">'+ (i+1) + '.' + timeofactivity +','+topic.substring(0,50)+'</option>'
             $('#y_Activitys').append(htmltext);
         }
     }
