--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -2,24 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>學生論證系統</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
-
-        <!-- 工作流程步驟 -->
-    <link href="assets/css/bs-is-fun.css" rel="stylesheet" />
+    <%- include ../argument/import/basic.html %>
+<%- include ../argument/import/templete_css.html %>
 </head>
 
 <body class="index-page">
@@ -108,7 +92,7 @@
                                        <li>
                                             <a href="#topic" data-toggle="tab" style="color: #000;">
                                                     <i class="material-icons">library_add</i>
-                                                    新增題目
+                                                    新增論證題目
                                                 </a>
                                         </li>
                                         <li >
@@ -228,7 +212,7 @@ $.get("./activity",
                 activity_tag = activity_list['return'][i]['unicode'];
                 activity_topic = activity_list['return'][i]['content'];
                 activity_id = activity_list['return'][i]['avtivity_id'];
-                $('#youractivity').append("<div style='text-align: left;width:100%;margin:8px;'>" + "activity_time: " + activity_time +','+activity_topic+' ---- activity_tag: ' + activity_tag + "<a href='./ActivityStatus?a_id="+activity_id+"'>----------->Detail</a></div>");
+                $('#youractivity').append("<div style='text-align: left;width:100%;margin:8px;'>" + "activity_time: " + activity_time +','+activity_topic+' ---- activity_tag: ' + activity_tag + "<a href='./ActivityStatus?a_id="+activity_id+"'>----------->詳細資料</a></div>");
                     //avtivity_id
             }
         } else {
