--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -3,12 +3,15 @@
 
 <head>
     <%- include ../argument/import/basic.html %>
-<%- include ../argument/import/templete_css.html %>
+    <%- include ../argument/import/templete_css.html %>
+    <!-- 工作流程步驟 -->
+    <link href="assets/css/bs-is-fun.css" rel="stylesheet" />
 </head>
 
 <body class="index-page">
     <header>
         <%- include ../argument/bar/header.html %>
+
     </header>
     <div class="wrapper">
         <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
@@ -175,18 +178,16 @@
         </footer>
     </div>
 </body>
-<!--   Core JS Files   -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+<%- include ../argument/import/templete_js.html %>
+
+
+
 <!-- 工作流程步驟 -->
 <script src="assets/js/brush.js"></script>
-<script src="assets/js/material-kit.js" type="text/javascript"></script>
+
+
+
+
 <script type="text/javascript">
 $().ready(function() {
     // the body of this function is in assets/material-kit.js
