--- a/system/views/argument/sitting_login.html
+++ b/system/views/argument/sitting_login.html
@@ -71,16 +71,8 @@
         </footer>
     </div>
 </body>
-<!--   Core JS Files   -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-<script src="assets/js/material-kit.js" type="text/javascript"></script>
+<%- include ../argument/import/templete_js.html %>
+
 <script type="text/javascript">
 $().ready(function() {
     // the body of this function is in assets/material-kit.js
