--- a/system/views/argument/bar/header.html
+++ b/system/views/argument/bar/header.html
@@ -8,13 +8,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="./login">
+                <a href="./index">
                     <div class="logo-container">
                         <div class="logo">
-                            <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
+                            <img src="assets/img/logo.png" alt="site Logo" rel="tooltip"  data-placement="bottom" data-html="true">
                         </div>
                         <div class="brand">
-                            Argument Sys
+                            學生合作論證平台
                         </div>
                     </div>
                 </a>
@@ -32,6 +32,11 @@
                             <i class="material-icons">chat</i> 進入活動
                         </a>
                     </li>
+                    <li>
+                        <a href="./sitting_login">
+                            <i class="material-icons">person_pin</i> 個人主頁
+                        </a>
+                    </li>
                     <!--http://fontawesome.io/icons/-->
                     <!--
                     <li>
@@ -39,19 +44,17 @@
                             <i class="fa fa-info-circle"></i>
                         </a>
                     </li>
-                    -->
-                    <!--
                     <li>
                         <a rel="tooltip" title="登出" data-placement="bottom" href="./user/logout" class="btn btn-white btn-simple btn-just-icon">
                             <i class="fa fa-sign-out"></i>
                         </a>
                     </li>
-                    -->
                     <li>
                         <a rel="tooltip" title="個人主頁" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
                             <i class="fa fa-cog"></i>
                         </a>
                     </li>
+                    -->
                 </ul>
             </div>
         </div>
