--- a/system/views/argument/bar/footer.html
+++ b/system/views/argument/bar/footer.html
@@ -2,23 +2,13 @@
     <nav class="pull-left">
         <ul>
             <li>
-                <a href="#">
+                <a href="./">
                 Home
             </a>
             </li>
             <li>
                 <a href="http://ytwu.lst.ncu.edu.tw/wu/ch/">
                About us</a>
-            </li>
-            <li>
-                <a href="#">
-               Blog
-            </a>
-            </li>
-            <li>
-                <a href="#">
-                Licenses
-            </a>
             </li>
         </ul>
     </nav>
